[tool.poetry]
name = "PST Telegram Bot"
version = "0.0.1"
description = "Telegram bot for ps testers help =)"
authors = ["BlackCatDevel0per <bcdev@mail.ru>"]
license = "Apache 2.0"
readme = "README.md"

##

[tool.poetry.urls]
Homepage = "https://github.com/BlackCatDevel0per/pst-tg-bot"
Documentation = "https://github.com/BlackCatDevel0per/pst-tg-bot"  # TODO: ...
Repository = "https://github.com/BlackCatDevel0per/pst-tg-bot"

[tool.ruff]
line-length = 100
select = [
	"RUF",
	"FBT",
	"FURB",
	"PERF",
	"TRY",
	"FLY",
	"YTT",
	"PIE",
	# "PYI",  # For stub files
	"TCH",
	"FA",
	"UP",
	"EM",
	"PL",
	"G",  # NOTE: CONF!
	"INP",
	"PT",
	"DJ",
	"NPY",
	"PD",
	"ERA",
	"ARG",
	"INT",
	"TID",
	"SIM",
	"SLOT",
	"RET",
	"RSE",
	"SLF",
	"T20",
	"Q",
	"ISC",
	"BLE",
	"DTZ",
	"COM",
	"C4",
	"A",
	"PTH",
	"FIX",
	"TD",
	"ANN",
	"S",
	"ASYNC",
	"D",
	"N",

	"C",
	"I",
	# Pycodestyle
	"E",
	# Pyflakes
	"F",
	"B",
	"W",
	# isort
	# "I001"
]

ignore = [
	"W191", "D206", "RET502",
	"UP040",  # New type aliases (type hinting)
	"PTH123",  # Not good solution for all things..
	"TD001",
	"TD002",
	"TD003",
	"S101",
]  # Add RET503?

src = ["src/pst_bot", "tests", "scripts", "examples"]
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "tests",
    "dev",
    "*.egg-info",
]
target-version = "py310"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
indent-style = "tab"


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rich = "^13.6.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
bs4 = "^0.0.1"
regex = "^2023.10.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-dependency = "^0.5.1"
ruff = "^0.0.292"
ipython = "^8.12.3"
# TODO: Nuitka..
pyperclip = "^1.8.2"

[tool.poetry.group.performance]
optional = true

[tool.poetry.group.performance.dependencies]
ujson = "5.8.0"



[tool.poetry.group.tg_bot]
optional = true

[tool.poetry.group.tg_bot.dependencies]
aiogram = "^3.1.1"

aiogram-middlewares = "^0.0.4"
brotli = "^1.1.0"

psutil = "^5.9.5"


[tool.poetry.group.tg_bot_db]
optional = false

[tool.poetry.group.tg_bot_db.dependencies]
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.21"
asyncpg = "^0.29.0"




[tool.poetry.group.other.dependencies]
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

